--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@ursine-arcana/shared": "*",
     "expo": "~54.0.25",
+    "expo-auth-session": "^7.0.9",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.15",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "tailwindcss": "^3.4.17",
