--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "build:functions": "npm run build -w @ursine-arcana/functions",
     "dev:mobile": "npm run start -w @ursine-arcana/mobile",
     "dev:admin": "npm run dev -w @ursine-arcana/admin",
+    "dev": "concurrently \"npm run dev:mobile\" \"npm run firebase:emulators\"",
     "lint": "npm run lint --workspaces --if-present",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present",
-    "firebase:emulators": "firebase emulators:start",
+    "firebase:emulators": "firebase emulators:start --project ursine-arcana",
     "firebase:deploy": "firebase deploy",
     "firebase:deploy:functions": "firebase deploy --only functions",
     "firebase:deploy:rules": "firebase deploy --only firestore:rules,storage"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
+    "concurrently": "^9.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
