--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -77,6 +77,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.13",
+    "react-native-worklets": "^0.7.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.0"
   }
